<resources>
    <string name="app_name">Sneaker World</string>
    <string name="title_activity_product_detail">ProductDetailActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title">Title</string>
    <string name="company">Company</string>
    <string name="price">Price in EUR</string>
    <string name="color">Product color</string>
    <string name="description">Product description</string>
    <string name="action_edit">Confirm Edit</string>
    <string name="action_delete">Delete</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password2">Confirm password</string>
    <string name="street">Street and number</string>
    <string name="post">Postal number</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="size">Size of shoe</string>
</resources>
